<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arpithasomayaji.chatroomapplication.WelcomeScreen.WelcomeScreen">


    <include
        android:id="@+id/background_wave"
        layout="@layout/background_wave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="-3dp" />

    <ImageView
        android:id="@+id/chat_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        app:srcCompat="@drawable/oval"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/background_wave"
        app:layout_constraintVertical_bias="0.18" />

    <ImageView
        android:id="@+id/chat_name_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/background_wave"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_logo"
        app:layout_constraintVertical_bias="0.196"
        app:srcCompat="@drawable/arpithachat" />

    <TextView
        android:id="@+id/welcome_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"
        android:includeFontPadding="true"
        android:text="@string/connect_with_friends"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/welcome_text2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_name_logo"

        tools:textStyle="bold"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_bias="0.504" />

    <TextView
        android:id="@+id/welcome_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/the_new_arpitha_chat_is_here"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/welcome_text3"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text1" />

    <TextView
        android:id="@+id/welcome_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/changing_the_way_we"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/welcome_text4"
        app:layout_constraintLeft_toRightOf="@+id/background_wave"
        app:layout_constraintRight_toLeftOf="@+id/background_wave"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text2" />

    <TextView
        android:id="@+id/welcome_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="424dp"
        android:text="@string/communicate"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/background_wave"
        app:layout_constraintRight_toLeftOf="@+id/background_wave"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/welcome_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintLeft_toLeftOf="@+id/background_wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text4"
        app:layout_constraintRight_toLeftOf="@+id/welcome_login_button"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/buttonshape"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/welcome_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/background_wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text4"
        android:layout_marginEnd="8dp"
        android:background="@drawable/buttonshape"
        android:textColor="@color/colorPrimary"/>


</android.support.constraint.ConstraintLayout>
